--- a/Пары (1 часть)/index.html
+++ b/Пары (1 часть)/index.html
@@ -27,5 +27,6 @@
             </div>
         </div>
     </body>
+    <img src="" alt="">
     <script type = 'module' src = "./main.js"></script>
 </html>
