--- a/The Star Wars/index.html
+++ b/The Star Wars/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Star Wars</title>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/The Star Wars/main.js"></script>
 </head>
 <body>
     <div id="app"></div>
